--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -39,16 +39,16 @@
 		div#joanne {
 			position: absolute;
 			left: -400px;
-			margin-top: 200px;
+			margin-top: 100px;
 		}
 		div#hyelee {
 			position: absolute;
-			margin-top: 300px;
+			margin-top: 200px;
 			right: 10%;
 		}
 		div#kim {
 			position: absolute;
-			margin-top: 400px;
+			margin-top: 300px;
 			animation-delay: 3s;
 			text-align: center;
 		}
@@ -73,22 +73,22 @@
 			#picture {
 				display: none;
 			}
+			#logos {
+				display: none;
+			}
 		}
 		.navbar-brand>img {
 			width: 200px;
 		}
 		#left {
-/*			display: inline-block;
-			background:;
-			height: 500px;
-			width: 300px;
-			margin-left: -50px;*/
+			margin-top: 80px;
+			margin-left: 100px;
 			font-size: 2em;
 		}
 		#right {
 			display: inline-block;
 			vertical-align: top;
-			margin-left: 200px;
+			margin-left: 150px;
 		}
 		main {
 			height: 100%;
@@ -96,13 +96,31 @@
 			margin-top: 30px;
 		}
 		#picture {
+			width: 430px;
     		position:fixed;
     		bottom:0px;
-    		left:40%;
+    		left:48%;
 		}
-/*		.description {
-			font-size: 0.7em;
-		}*/
+		#intro {
+			display: inline-block;
+			animation-delay: 7s;
+			animation-iteration-count: 1;
+		}
+		#description {
+			display: inline-block;
+			animation-delay: 8s;
+			animation-iteration-count: 1;
+		}
+		.logos {
+			position: absolute;
+			right: 8px;
+/*			bottom: 10px;*/
+			margin-top: 230px;
+			margin-left: 120px;
+			margin-bottom: 10px;
+			height: 60px;
+			position: fixed;
+		}
 /*		.img-responsive {
 			width: 200%;
 			height: auto;
@@ -115,6 +133,8 @@
 	</style>
 </head>
 <body>
+
+
 
 <div id="wrapper">
 
@@ -130,20 +150,20 @@
 
 	<nav>
 		<nav class="navbar navbar-custom">
-		  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" 		data-target="#exCollapsingNavbar2">
+		  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
 		    &#9776;
 		  </button>
 		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
 		    <a class="navbar-brand" href="#"><img src="logo.png" class="navbar-brand img-responsive"></a>
 		    <ul class="nav navbar-nav navbar-right">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">About</a>
+		        <a class="nav-link" href="/main/about" id="about">About</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Portfolio</a>
+		        <a class="nav-link" href="/main/portfolio">Portfolio</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contact</a>
+		        <a class="nav-link" href="/contacts/new">Contact</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -154,28 +174,54 @@
    <Center>
 
 
-  <div class="col-xs-6" id="left">
-  	Hello, I'm Joanne!<br>
-   	<span class="description">Aspiring Front-End Developer</span>
+  <div class="col-xs-5" id="left">
+  	<span class="animated bounceInDown" id="intro">Hello, I'm Joanne!</span><br>
+   	<span class="animated bounceInDown" id="description">Aspiring Front-End/UI Developer</span>
   </div>
-  <div class="col-xs-6">
-  	<img src="picture.png" id="picture" class="img-responsive">
+  <div class="col-xs-4">
+  	<img src="/assets/joannekim.png" id="picture" class="img-responsive">
   </div>
-
+  <div class="col-xs-4" id="logos">
+  	<a href="https://github.com/joannehkim"><img src="/assets/github.png" id="github" class="img-responsive logos"></a><br><br><br>
+  	<a href="https://www.linkedin.com/in/joanne-kim-85a07263"><img src="/assets/linkedin.png" class="img-responsive logos"></a>
+  </div>
    </main>
+
 </div>
 
 <script type="text/javascript">
 	$("#joanne").animate({left: "20%"});
 	$("#hyelee").animate({left: "20%"});
-	$("#kim").animate({left: "42%"});
+	$("#kim").animate({left: "48%"});
 
-	$(window).load(function() {
+	var initialLoad = true;
+
+	// $(document).ready(function() {
+	// 	initialLoad = false;
+	// })
+
+	// if (initialLoad) {
+		$(document).ready(function() {
 		function show_slideup() {
 			$("#loading").slideUp(4000);
 		};
 		window.setTimeout(show_slideup, 3000);
-	});
+		initialLoad = false;
+		});
+	// }
+
+	// $(document).ready(function() {
+	// 	$("#about").click(function() {
+	// 		// event.preventDefault();
+	// 		newLocation = this.href;
+	// 		$("body").fadeOut(3000);
+	// 	});
+
+	// 	function newpage() {
+	// 		window.location = newLocation;
+	// 	}
+	// });
+
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
 </body>
