--- a/app/views/main/portfolio.html.erb
+++ b/app/views/main/portfolio.html.erb
@@ -105,9 +105,10 @@
 
 
 <div id="first_row">
+
   <div class="col-md-4">
   <figure class="friends">
-  	<a href="/projects/friends"><img src="/assets/friends.png"></a>
+  	<a href="/projects/compass"><img src="/assets/compass.png"></a>
   		<figcaption>
 
   		</figcaption>
@@ -143,7 +144,7 @@
 
   <div class="col-md-4">
   <figure class="friends">
-  	<a href="/projects/compass"><img src="/assets/compass.png"></a>
+  	<a href="/projects/friends"><img src="/assets/friends.png"></a>
   		<figcaption>
 
   		</figcaption>
@@ -152,7 +153,7 @@
 
   <div class="col-md-4">
   <figure class="friends">
-  	<a href="/projects/secrets"><img src="/assets/secrets.png"></a>
+  	<a href="/projects/ideas"><img src="/assets/ideas.png"></a>
   		<figcaption>
 
   		</figcaption>
