--- a/app/views/projects/compass.html.erb
+++ b/app/views/projects/compass.html.erb
@@ -65,10 +65,10 @@
 			color: white;
 			border: none;
 			text-decoration: none;
-			margin-bottom: 20px;
+			margin-bottom: 80px;
 		}
 		.blank {
-			margin-bottom: 30px;
+			margin-bottom: 80px;
 		}
 		figure.friends {
 			opacity: 0;
@@ -115,22 +115,25 @@
     </nav>
 
    <main>
-   <center>
-   <h1 class="header">FRIENDS</h1>
-   <h4>Simple application where users can sign up and login to add/delete friends, view the list of current friends and their profiles, and also shows a list of other users who are not friends with the logged in user.</h4><br>
-   <h6>Created with LAMP stack: PHP, Apache, MySQL, CodeIgniter, Bootstrap</h6><br>
+   <Center>
+   <h1 class="header">COMPASS</h1>
+   <h4>A travel planning application where user can view popular itineraries created by other users. Users can create new trips and places, add or update pictures, include cost detaills, and more.</h4><br>
+   <h6>Created with RUBY stack: Ruby, Rails, PostgreSQL, Materialize, Photoshop, Illustrator, Final Cut Pro</h6><br>
    <div id="pictures">
    <figure class="friends">
-   <img src="/assets/friends01.png" class="examples">
-   <img src="/assets/friends02.png" class="examples">
-   <img src="/assets/friends03.png" class="examples">
+   <img src="/assets/compass01.png" class="examples">
+   <img src="/assets/compass07.png" class="examples">
+   <img src="/assets/compass02.png" class="examples">
+   <img src="/assets/compass06.png" class="examples">
+   <img src="/assets/compass03.png" class="examples">
+   <img src="/assets/compass04.png" class="examples">
+   <img src="/assets/compass05.png" class="examples">
    </figure>
-   </div>
-   <br><br>
+   </div><br>
+   <br><br><br>
 
-
-   <a id="button" href="http://52.37.165.165/">PUBLIC IP (AWS)</a>
-   <a id="button" href="https://github.com/joannehkim/Friends">VIEW ON GITHUB</a>
+   <a id="button" href="http://52.35.46.94/">PUBLIC IP (AWS)</a>
+   <a id="button" href="https://github.com/joannehkim/ruby_project">VIEW ON GITHUB</a>
 </div>
 
 <script type="text/javascript">
