--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,27 +1,10 @@
 @import "bootstrap";
 @import "normalize";
+@import "main";
 @import "contacts";
-
-
 
 body {
     font-family: 'Poiret One', cursive;
-}
-.navbar-custom {
-    background-color: #000000;
-    color:#ffffff;
-    height: 100px;
-    border-radius:0;
-}
-.navbar-custom .navbar-nav > li > a {
-    color:#fff;
-}
-.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
-    color: #ffffff;
-    background-color:transparent;
-}
-.navbar-custom .navbar-brand {
-    color:#eeeeee;
 }
 
 
