--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -1,3 +1,93 @@
 .hidden {
 	display: none;
 }
+.contact_new{
+			background-image: url("/assets/background.png");
+			background-size: 100% auto;
+			background-repeat: no-repeat;
+		}
+		.contact_form {
+			margin-top: -90px;
+		}
+		#loading {
+			background-color: white;
+			height: 100%;
+			width: 100%;
+			position: fixed;
+			z-index: 1;
+			margin-top: 0px;
+			top: 0px;
+			text-align: center;
+		}
+		.navbar {
+    		background: transparent;
+    		height: 200px;
+		}
+		.navbar-right {
+   			float: right;
+		}
+		@media (max-width: 543px) {
+			.navbar {
+				background: black;
+				height: 80px;
+			}
+			#picture {
+				display: none;
+			}
+			#logos {
+				display: none;
+			}
+			#logo_top {
+				display: none;
+			}
+			.container {
+				margin-top: 50px;
+			}
+		}
+		.navbar-brand>img {
+			width: 200px;
+		}
+		#left {
+/*			display: inline-block;
+			background:;
+			height: 500px;
+			width: 300px;
+			margin-left: -50px;*/
+			font-size: 2em;
+		}
+		#right {
+			display: inline-block;
+			vertical-align: top;
+			margin-left: 200px;
+		}
+		main {
+			height: 100%;
+			margin-top: 20px;
+		}
+
+		#intro {
+			display: inline-block;
+			animation-delay: 7s;
+		}
+		#description {
+			display: inline-block;
+			animation-delay: 8s;
+		}
+		.logos {
+			position: absolute;
+			right: 8px;
+/*			bottom: 10px;*/
+			margin-top: 230px;
+			margin-left: 120px;
+			margin-bottom: 10px;
+			height: 60px;
+			position: fixed;
+		}
+/*		.img-responsive {
+			width: 200%;
+			height: auto;
+		}*/
+/*		img {
+			max-width: auto;
+			height: auto;
+		}	*/	
