--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,113 +1,4 @@
-<!DOCTYPE html>
-<html lang="en"/>
-<head>
-	<title>Joanne Hyelee Kim</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Joanne Hyelee Kim's Portfolio"/>
-	<meta name="keywords" content="Joanne Hyelee Kim"/>
-	<link rel="stylesheet" href="animate.css">
-	<style type="text/css">
-		body {
-			background-image: url("/assets/background.png");
-			background-size: 100% auto;
-			background-repeat: no-repeat;
-		}
-		.container {
-			margin-top: -90px;
-		}
-		#loading {
-			background-color: white;
-			height: 100%;
-			width: 100%;
-			position: fixed;
-			z-index: 1;
-			margin-top: 0px;
-			top: 0px;
-			text-align: center;
-		}
-		.navbar {
-    		background: transparent;
-    		height: 200px;
-		}
-		.navbar-right {
-   			float: right;
-		}
-		@media (max-width: 543px) {
-			.navbar {
-				background: black;
-				height: 80px;
-			}
-			#picture {
-				display: none;
-			}
-			#logos {
-				display: none;
-			}
-			#logo_top {
-				display: none;
-			}
-			.container {
-				margin-top: 50px;
-			}
-		}
-		.navbar-brand>img {
-			width: 200px;
-		}
-		#left {
-/*			display: inline-block;
-			background:;
-			height: 500px;
-			width: 300px;
-			margin-left: -50px;*/
-			font-size: 2em;
-		}
-		#right {
-			display: inline-block;
-			vertical-align: top;
-			margin-left: 200px;
-		}
-		main {
-			height: 100%;
-/*			background-color: red;*/
-			margin-top: 20px;
-		}
-		#picture {
-    		position:fixed;
-    		bottom:0px;
-    		left:40%;
-		}
-		#intro {
-			display: inline-block;
-			animation-delay: 7s;
-		}
-		#description {
-			display: inline-block;
-			animation-delay: 8s;
-		}
-		.logos {
-			position: absolute;
-			right: 8px;
-/*			bottom: 10px;*/
-			margin-top: 230px;
-			margin-left: 120px;
-			margin-bottom: 10px;
-			height: 60px;
-			position: fixed;
-		}
-/*		.img-responsive {
-			width: 200%;
-			height: auto;
-		}*/
-/*		img {
-			max-width: auto;
-			height: auto;
-		}	*/	
-
-	</style>
-</head>
-<body>
-
-<div id="wrapper">
+<div id="wrapper" class="contact_new">
 	<nav>
 		<nav class="navbar navbar-custom">
 		  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
@@ -123,7 +14,7 @@
 		        <a class="nav-link" href="/main/portfolio">Portfolio</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="/main/contact">Contact</a>
+		        <a class="nav-link" href="/contacts/new">Contact</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -138,7 +29,7 @@
   </div>
 
 
-<div class="container">
+<div class="container contact_form">
     <div class="row">
             <div class="col-md-4 col-md-offset-1">
             	<legend><h3 class="header">Have a Question?<br>Contact me!</h3></legend>
@@ -191,5 +82,3 @@
    </main>
 
 </div>
-</body>
-</html>
