--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,203 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-  <link rel="stylesheet" href="/assets/animate.css">
-  
-
-
-<style type="text/css">
-/* ============================================================
-  PRIMARY STRUCTURE
-============================================================ */
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-}
-/* ============================================================
-  SECTIONS
-============================================================ */
-section.module:last-child {
-  margin-bottom: 0;
-}
-section.module h2 {
-  margin-bottom: 40px;
-  font-family: "Roboto Slab", serif;
-  font-size: 30px;
-}
-/*section.module p {
-  margin-bottom: 40px;
-  font-size: 16px;
-  font-weight: 300;
-}*/
-section.module p:last-child {
-  margin-bottom: 0;
-}
-section.module.content {
-  padding: 40px 0;
-}
-section.module.parallax {
-  height: 800px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-section.module.parallax-2 {
-  height: 600px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-section.module.parallax-3 {
-  height: 600px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-section.module.parallax h1 {
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 48px;
-  line-height: 700px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-section.module.parallax-2 h1, section.module.parallax-3 h1 {
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 48px;
-  line-height: 600px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-section.module.parallax-1 {
-  background-image: url("/assets/background1.png");
-}
-section.module.parallax-2 {
-  background-image: url("/assets/background2.png");
-}
-section.module.parallax-3 {
-  background-image: url("/assets/background3.png");
-}
-
-@media all and (min-width: 600px) {
-  section.module h2 {
-    font-size: 42px;
-  }
-  section.module p {
-    font-size: 20px;
-  }
-  section.module.parallax h1 {
-    font-size: 96px;
-  }
-}
-@media all and (min-width: 960px) {
-  section.module.parallax h1 {
-    font-size: 160px;
-  }
-}
-.banner {
-	margin-top: -120px;
-  height:;
-}
-.icon {
-	width: 180px;
-}
-.file {
-	height: 100px;
-}
-.files {
-  margin-top: -10px;
-}
-#logos {
-	position: absolute;
-	top: 0;
-	right: 0;
-  padding: 5px;
-}
-#logos img {
-  width: 50px;
-}
-.nav-wrapper {
- background: none;
- z-index: 1;
-}
-nav {
- position: absolute;
- margin-top: 20px;
- box-shadow: none;
-}
-#overlay {
-  background-color: rgba(0,0,0,0.5);
-  position:absolute;
-  top:0;
-  bottom:0;
-  left:0;
-  right:0;
-  z-index:11;
-}
-#p_button {
-  background-color: black;
-  border-radius: 30px;
-  position: absolute;
-  top: 5px;
-  left: 10px;
-  border: none;
-  padding: 15px;
-  color: white;
-}
-/*.is_showing {
-  transition: all 0.3 ease-in-out;
-}*/
-figure.about_para {
-  opacity: 0;
-  transform: translateX(-20px);
-}
-figure.is_showing {
-  opacity: 1;
-  animation-duration: 2s;
-/*  transition: all 0.9s ease-in-out;*/
-}
-figure.skills {
-  opacity: 0;
-  transform: translateX(-20px);
-}
-figure.skills.is_showing {
-  opacity: 1;
-  transform: translateX(0px);
-}
-figure.skills_para {
-  opacity: 0;
-  transform: translateX(-20px);
-}
-figure.skills_para.is_showing {
-  opacity: 1;
-  transform: translateX(0px);
-}
-figure.skills_para_after {
-  opacity: 0;
-  transform: translateX(-20px);
-}
-figure.skills_para_after.is_showing {
-  opacity: 1;
-  transform: translateX(0px);
-  margin-left: 10px;
-  animation-delay: 1s;
-}
-</style>
-
-
-</head>
-<body>
-
-  <div id="logos">
-  	<a href="https://github.com/joannehkim"><img src="/assets/github.png" id="github" class="img-responsive logos"></a>
-  	<a href="https://www.linkedin.com/in/joanne-kim-85a07263"><img src="/assets/linkedin.png" class="img-responsive logos"></a>
+<div id="side_logos">
+  	<a href="https://www.linkedin.com/in/joanne-kim-85a07263"><img src="/assets/linkedin.png" class="img-responsive side_logos" id="linked_in"></a>
+    <a href="https://github.com/joannehkim"><img src="/assets/github.png" id="github" class="img-responsive side_logos"></a>
   </div>
 
   <div id="buttons">
@@ -218,8 +21,8 @@ figure.skills_para_after.is_showing {
 
   		<div class="col-md-12">
       <figure class="about_para">
-  		<img src="/assets/aboutme.png" >
-  		<h5>It all started when I figured out how to change the background color of my Xanga website. Back then, I thought to myself, "I'm a web designer!" Little did I know how challenging and fun it is to create a website from scratch...</h5> <h5>I graduated with a Bachelor's of Science Degree in Family & Consumer Sciences: Design and Merchandising. After graduating, I worked in the fashion industry as a Production Coordinator/Designer. Then I decided to attend Coding Dojo (where I learned 3 full stacks) to further develop my skills.</h5>
+     <h1 class="about_header">ABOUT ME</h1>
+  		<h5>It all started when I figured out how to change the background color of my Xanga website. Back then I thought to myself, "I'm a web designer!" Little did I know how challenging and fun it is to build a website from scratch...</h5> <h5>I graduated with a Bachelor's of Science Degree in Family & Consumer Sciences: Design and Merchandising. After graduating, I worked in the fashion industry as a Production Coordinator/Designer. Then I decided to attend Coding Dojo (where I learned 3 full stacks) to further develop my skills.</h5>
   		</div>
       </figure>
 	</div>
@@ -282,6 +85,8 @@ figure.skills_para_after.is_showing {
   <figure class="col-md-12 skills_para_after">
   <img src="/assets/html5.png" class="img-responsive file files">
   <img src="/assets/css3.png" class="img-responsive file files">
+  <img src="/assets/materialize.png" class="img-responsive file files">
+  <img src="/assets/bootstrap.png" class="img-responsive bootstrap">
   <img src="/assets/photoshop.png" class="img-responsive file">
   <img src="/assets/illustrator.png" class="img-responsive file">
   <img src="/assets/sketch.png" class="img-responsive file">
@@ -299,7 +104,9 @@ figure.skills_para_after.is_showing {
 
 <section class="module parallax parallax-3">
   <div class="container">
+    <figure class="facts">
     <h1>Facts</h1>
+    </figure>
   </div>
 </section>
 
@@ -309,49 +116,22 @@ figure.skills_para_after.is_showing {
 	<div class="row">
 	<center>
   		<div class="col-md-12">
-      <img src="/assets/randomfacts.png" class="img-responsive">
+      <figure class="facts_para">
+      <h1 class="about_header underlined">RANDOM</h1>
       <p>I was born in Seoul, South Korea.</p>
       <p>My favorite movie is the Transformers.</p>
       <p>I collect Funko Pop! Vinyl Figures.</p>
       <p>I like to play video games.</p>
+      <p>I was in marching band for four years.</p>
+      <p>I sell handmade bow ties on Etsy.</p>
+      </figure>
       </div>
 	</div>
   </div>
 </section>
 
-<script type="text/javascript">
-	$(window).scroll(function() {
 
-		var wScroll = $(this).scrollTop();
+<% content_for(:head) do %>
+  <%= javascript_include_tag 'about_js' %>
+<% end %>
 
-    console.log(wScroll);
-
-		if(wScroll > $('.about_para').offset().top - 500) {
-			$(".about_para").addClass("animated slideInLeft is_showing");
-		}
-
-    if(wScroll > $('.skills').offset().top - 500) {
-      $(".skills").addClass("animated bounceInDown is_showing");
-    }
-
-    if(wScroll > $('.skills_logo').offset().top - 500) {
-      $(".skills_para").addClass("animated zoomInRight is_showing");
-    }
-
-    if(wScroll > $('.skills_logo').offset().top - 500) {
-      $(".skills_para_after").addClass("animated zoomInRight is_showing");
-    }
-
-
-
-
-
-		// $('.container').css({
-		// 	'transform' : 'translate(0px, '+ wScroll /2 +'%)'
-		// });
-
-		// console.log(wScroll);
-	});
-</script>
-</body>
-</html>
