--- a/app/views/projects/gold_game.html.erb
+++ b/app/views/projects/gold_game.html.erb
@@ -53,6 +53,7 @@
 			width: 80%;
 			margin: 0 auto;
 			margin-bottom: 100px;
+			text-align: center;
 		}
 		.examples {
 			width: 80%;
@@ -65,10 +66,10 @@
 			color: white;
 			border: none;
 			text-decoration: none;
-			margin-bottom: 20px;
+			margin-bottom: 80px;
 		}
 		.blank {
-			margin-bottom: 30px;
+			margin-bottom: 80px;
 		}
 		figure.friends {
 			opacity: 0;
@@ -115,22 +116,19 @@
     </nav>
 
    <main>
-   <center>
-   <h1 class="header">FRIENDS</h1>
-   <h4>Simple application where users can sign up and login to add/delete friends, view the list of current friends and their profiles, and also shows a list of other users who are not friends with the logged in user.</h4><br>
-   <h6>Created with LAMP stack: PHP, Apache, MySQL, CodeIgniter, Bootstrap</h6><br>
+   <Center>
+   <h1 class="header">GOLD GAME</h1>
+   <h4>A mini-game where ninjas can earn or lose money from different places (farm, cave, house, or casino). </h4><br>
+   <h6>Created with RUBY stack</h6><br>
    <div id="pictures">
    <figure class="friends">
-   <img src="/assets/friends01.png" class="examples">
-   <img src="/assets/friends02.png" class="examples">
-   <img src="/assets/friends03.png" class="examples">
+   <img src="/assets/gold_game01.png" class="examples">
+   <img src="/assets/gold_game02.png" class="examples">
    </figure>
    </div>
    <br><br>
 
-
-   <a id="button" href="http://52.37.165.165/">PUBLIC IP (AWS)</a>
-   <a id="button" href="https://github.com/joannehkim/Friends">VIEW ON GITHUB</a>
+   <a id="button" href="https://github.com/joannehkim/gold_game">VIEW ON GITHUB</a>
 </div>
 
 <script type="text/javascript">
