--- a/app/views/projects/ideas.html.erb
+++ b/app/views/projects/ideas.html.erb
@@ -65,10 +65,10 @@
 			color: white;
 			border: none;
 			text-decoration: none;
-			margin-bottom: 20px;
+			margin-bottom: 80px;
 		}
 		.blank {
-			margin-bottom: 30px;
+			margin-bottom: 80px;
 		}
 		figure.friends {
 			opacity: 0;
@@ -115,22 +115,22 @@
     </nav>
 
    <main>
-   <center>
-   <h1 class="header">FRIENDS</h1>
-   <h4>Simple application where users can sign up and login to add/delete friends, view the list of current friends and their profiles, and also shows a list of other users who are not friends with the logged in user.</h4><br>
-   <h6>Created with LAMP stack: PHP, Apache, MySQL, CodeIgniter, Bootstrap</h6><br>
+   <Center>
+   <h1 class="header">IDEAS</h1>
+   <h4>An application where users can post ideas and view ideas posted by other users. Users can like or unlike posts and delete his/her own posts. Users can also view other users' profiles and see the list of people who liked each post.</h4><br>
+   <h6>Created with RUBY stack: Ruby, Rails, PostgreSQL, Bootstrap</h6><br>
    <div id="pictures">
    <figure class="friends">
-   <img src="/assets/friends01.png" class="examples">
-   <img src="/assets/friends02.png" class="examples">
-   <img src="/assets/friends03.png" class="examples">
+   <img src="/assets/ideas01.png" class="examples">
+   <img src="/assets/ideas02.png" class="examples">
+   <img src="/assets/ideas03.png" class="examples">
+   <img src="/assets/ideas04.png" class="examples">
    </figure>
-   </div>
-   <br><br>
+   </div><br>
+   <br><br><br>
 
-
-   <a id="button" href="http://52.37.165.165/">PUBLIC IP (AWS)</a>
-   <a id="button" href="https://github.com/joannehkim/Friends">VIEW ON GITHUB</a>
+   <a id="button" href="http://52.25.28.100">PUBLIC IP (AWS)</a>
+   <a id="button" href="https://github.com/joannehkim/ideas">VIEW ON GITHUB</a>
 </div>
 
 <script type="text/javascript">
