new kcpk images

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,6 +2,7 @@
   background-image: url("background.png");
   background-size: 100% auto;
   background-repeat: no-repeat;
+  border: none;
 }
 a:link, a:visited, a:hover, a:active {
   color: white;
