--- a/app/views/projects/compass.html.erb
+++ b/app/views/projects/compass.html.erb
@@ -118,6 +118,7 @@
    <Center>
    <h1 class="header">COMPASS</h1>
    <h4>A travel planning application where user can view popular itineraries created by other users. Users can create new trips and places, add or update pictures, include cost detaills, and more.</h4><br>
+   <h6>(4-person project)</h6>
    <h6>Created with RUBY stack: Ruby, Rails, PostgreSQL, Materialize, Photoshop, Illustrator, Final Cut Pro</h6><br>
    <div id="pictures">
    <figure class="friends">
