--- a/app/views/projects/frame.html.erb
+++ b/app/views/projects/frame.html.erb
@@ -118,6 +118,7 @@
    <Center>
    <h1 class="header">FRAME</h1>
    <h4>A simple, yet powerful to do application to easily manage tasks.<br>Users can quickly add new events according to category colors.</h4><br>
+   <h6>(3-person project)</h6>
    <h6>Created with MEAN stack: Javascript, MongoDB, Angular, Node.JS, Express.JS, Photoshop, Illustrator, Sketch</h6><br>
    <div id="pictures">
    <figure class="friends">
@@ -130,7 +131,7 @@
    </div>
    <br><br>
 
-   <a id="button" href="http://52.39.117.222/">PUBLIC IP (AWS)</a>
+   <a id="button" href="http://54.186.42.68/#/">PUBLIC IP (AWS)</a>
    <a id="button" href="https://github.com/joannehkim/mean_project">VIEW ON GITHUB</a>
 </div>
 
