--- a/app/views/projects/ecommerce.html.erb
+++ b/app/views/projects/ecommerce.html.erb
@@ -119,21 +119,22 @@
    <center>
    <h1 class="header">KCPK</h1>
    <h4>An ecommerce website where users can easily sign up, login, and shop.</h4><br>
+   <h6>(4-person project)</h6>
    <h6>Created with LAMP stack: PHP, Apache, MySQL, CodeIgniter, Bootstrap, Photoshop, Illustrator</h6><br>
    <div id="pictures">
    <figure class="friends">
-   <img src="/assets/kcpk01.png" class="examples">
-   <img src="/assets/kcpk02.png" class="examples">
-   <img src="/assets/kcpk03.png" class="examples">
-   <img src="/assets/kcpk04.png" class="examples">
-   <img src="/assets/kcpk05.png" class="examples"><br>
+   <img src="/assets/kcpk1.png" class="examples">
+   <img src="/assets/kcpk4.png" class="examples">
+   <img src="/assets/kcpk2.png" class="examples">
+   <img src="/assets/kcpk3.png" class="examples">
+   <img src="/assets/kcpk5.png" class="examples"><br>
    Images Copyright Urban Outfitters (used only for project demonstration)
    </figure>
    </div>
    <br><br><br>
 
-   <a id="button" href="http://54.187.131.1/">PUBLIC IP (AWS)</a>
-   <a id="button" href="https://github.com/joannehkim/Friends">VIEW ON GITHUB</a>
+   <a id="button" href="#">PUBLIC IP (AWS)</a>
+   <a id="button" href="https://github.com/joannehkim/kcpk">VIEW ON GITHUB</a>
 </div>
 
 <script type="text/javascript">
