edited main & about pages

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -37,7 +37,7 @@
 <Center>
   <div class="col-xs-5" id="left">
   	<span class="animated bounceInDown" id="intro">Hello, I'm Joanne!</span><br>
-   	<span class="animated bounceInDown" id="description">Aspiring Front-End/UI Developer</span>
+   	<span class="animated bounceInDown" id="description">Front-End/UI Developer</span>
   </div>
   <div class="col-xs-4">
   	<%= image_tag('joannekim.png', class:'img-responsive', id:'picture') %>
