--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -22,7 +22,7 @@
   		<div class="col-md-12">
       <figure class="about_para">
      <h1 class="about_header">ABOUT ME</h1>
-  		<h5>It all started when I figured out how to change the background color of my Xanga website. Back then I thought to myself, "I'm a web designer!" Little did I know how challenging and fun it is to build a website from scratch...</h5> <h5>I graduated with a Bachelor's of Science Degree in Family & Consumer Sciences: Design and Merchandising. After graduating, I worked in the fashion industry as a Production Coordinator/Designer. Then I decided to attend Coding Dojo (where I learned 3 full stacks) to further develop my skills.</h5>
+  		<h5>It all started when I figured out how to change the background color of my Xanga website. Back then I thought to myself, "I'm a web designer!" Little did I know how challenging and fun it is to build a website from scratch...</h5> <h5>I graduated with a Bachelor's of Science Degree in Family & Consumer Sciences: Design and Merchandising. After graduating, I worked in the fashion industry as a Production Coordinator/Designer. To further develop my skills, I decided to attend Coding Dojo, an intensive 14-week web development program with a curriculum focused on three full stacks.</h5>
   		</div>
       </figure>
 	</div>
