--- a/app/views/projects/compass.html.erb
+++ b/app/views/projects/compass.html.erb
@@ -129,8 +129,9 @@
    <img src="/assets/compass03.png" class="examples">
    <img src="/assets/compass04.png" class="examples">
    <img src="/assets/compass05.png" class="examples">
+   <img src="/assets/wireframe2.png" class="examples">
    </figure>
-   </div><br>
+   </div>
    <br><br><br>
 
    <a id="button" href="http://52.35.46.94/">PUBLIC IP (AWS)</a>
