--- a/app/views/projects/ecommerce.html.erb
+++ b/app/views/projects/ecommerce.html.erb
@@ -127,7 +127,8 @@
    <img src="/assets/kcpk4.png" class="examples">
    <img src="/assets/kcpk2.png" class="examples">
    <img src="/assets/kcpk3.png" class="examples">
-   <img src="/assets/kcpk5.png" class="examples"><br>
+   <img src="/assets/kcpk5.png" class="examples">
+   <img src="/assets/wireframe1.png" class="examples"><br>
    Images Copyright Urban Outfitters (used only for project demonstration)
    </figure>
    </div>
